--- a/src/stylesheets/base/_typography.scss
+++ b/src/stylesheets/base/_typography.scss
@@ -22,7 +22,7 @@ h1, h2, h3, h4, h5, h6, p, a {
 h1, h2, h3, h4, h5, h6,
 .heading--1, .heading--2, .heading--3,
 .heading--4, .heading--5, .heading--6,
-.display--1, .display--2 {
+.display--1, .display--2, .display--3 {
   font-family: $font-family-default;
   font-weight: 700;
   line-height: 1.4;
@@ -35,8 +35,9 @@ h4, .heading--4 { font-size: 2.4rem; }
 h5, .heading--5 { font-size: 2.0rem; }
 h6, .heading--6 { font-size: 1.6rem; }
 
-.display--1 { font-size: 7.2rem; }
-.display--2 { font-size: 6.0rem; }
+.display--1 { font-size: 9.6rem; }
+.display--2 { font-size: 7.2rem; }
+.display--3 { font-size: 6.0rem; }
 
 .lead {
   font-size: 2.4rem;
@@ -143,8 +144,9 @@ a:focus {
   h1, .heading--1 { font-size: 3.6rem; }
   h2, .heading--2 { font-size: 3.0rem; }
   h3, .heading--3 { font-size: 2.4rem; }
-  .display--1 { font-size: 4.8rem; }
-  .display--2 { font-size: 4.2rem; }
+  .display--1 { font-size: 6.0rem; }
+  .display--2 { font-size: 4.8rem; }
+  .display--3 { font-size: 4.2rem; }
   .lead { font-size: 1.8rem; }
   p { font-size: 1.8rem; }
 }
