--- a/src/stylesheets/modules/_hero.scss
+++ b/src/stylesheets/modules/_hero.scss
@@ -2,21 +2,27 @@
   width: 100%;
   height: calc(100vh - 200px);
   background-color: #d8d2c9;
+  &__bg {
+    background-image: url("../images/hero_1.jpg");
+    background-position: center center;
+    background-size: cover;
+  }
   &__container {
-    max-width: 2000px;
+    max-width: 2200px;
   }
   &__text-container {
-    max-width: 1160px;
+    max-width: 960px;
   }
   &__niche {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-weight: 600;
-    margin-bottom: 20px;
-    letter-spacing: 3px;
+    margin-bottom: 10px;
+    letter-spacing: 1px;
     text-transform: uppercase;
     color: #ffffff;
   }
   &__title {
+    font-weight: 600;
     line-height: 1.1;
     margin: 0;
     color: #ffffff;
