Added SmallCarousel and Slide components.

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -13,5 +13,7 @@
 @import "components/embeds";
 @import "components/images";
 @import "components/overlay";
+@import "components/slide";
 
 @import "modules/hero";
+@import "modules/small_carousel";
