Fixed assets directory.

--- a/src/stylesheets/modules/_hero.scss
+++ b/src/stylesheets/modules/_hero.scss
@@ -3,7 +3,7 @@
   height: calc(100vh - 200px);
   background-color: #d8d2c9;
   &__bg {
-    background-image: url("../images/andy.jpg");
+    background-image: url("../assets/images/andy.jpg");
     background-position: center center;
     background-size: cover;
   }
