--- a/src/stylesheets/components/_slide.scss
+++ b/src/stylesheets/components/_slide.scss
@@ -3,8 +3,16 @@
   width: 300px;
   height: 180px;
   padding-left: 10px;
+  cursor: grab;
+  text-decoration: none;
   &__image {
     padding-bottom: 5px;
+    transition: all 0.2s;
+    opacity: 0.5;
+  }
+  &__text {
+    opacity: 0;
+    transition: all 0.2s;
   }
   &__niche {
     font-size: 1.2rem;
@@ -18,5 +26,13 @@
     font-size: 1.2rem;
     margin: 0;
     color: $text-light;
+  }
+}
+.slide:hover {
+  .slide__image {
+    opacity: 1;
+  }
+  .slide__text {
+    opacity: 1;
   }
 }
