--- a/src/stylesheets/components/_buttons.scss
+++ b/src/stylesheets/components/_buttons.scss
@@ -1,7 +1,7 @@
 @mixin btn-styles {
   @include appearance-none;
   font-family: $font-family-default;
-  font-size: 2.0rem;
+  font-size: $font-size-default;
   font-weight: 600;
   line-height: 1.4;
   display: inline-block;
