--- a/src/stylesheets/components/_slide.scss
+++ b/src/stylesheets/components/_slide.scss
@@ -1,9 +1,11 @@
+.slider {
+  position: relative;
+}
 .slide {
-  float: left;
+  position: absolute;
   width: 300px;
   height: 180px;
   padding-left: 10px;
-  cursor: grab;
   text-decoration: none;
   &__image-container {
     overflow: hidden;
@@ -11,8 +13,8 @@
   }
   &__image {
     transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
-    opacity: 0.5;
     transform-origin: center center;
+    opacity: 0.5;
   }
   &__text {
     transition: all 0.2s;
