--- a/src/stylesheets/components/_slide.scss
+++ b/src/stylesheets/components/_slide.scss
@@ -1,26 +1,12 @@
-// .slider-container {
-//   position: absolute;
-//   width: 100%;
-//   left: 0;
-// }
-// .slider {
-//   position: absolute;
-//   left: 0;
-//   width: 100%;
-// }
-// .slider-container {
-//   position: absolute;
-//   width: 100%;
-//   left: 0;
-//   height: 190px;
-// }
-.slider-container {
-  // padding-right: 10px;
+.slider {
+  position: absolute;
+  width: 100%;
+  height: 190px;
 }
 .slide {
-  // position: absolute;
-  position: relative;
-  float: left;
+  // position: relative;
+  // float: left;
+  position: absolute;
   width: 300px;
   height: 180px;
   padding-left: 10px;
