--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -17,6 +17,7 @@
 @import "components/overlay";
 @import "components/slide";
 
+@import "modules/cta";
 @import "modules/footer";
 @import "modules/header";
 @import "modules/hero";
