--- a/src/stylesheets/modules/_spreader.scss
+++ b/src/stylesheets/modules/_spreader.scss
@@ -9,16 +9,13 @@
     width: 1400px;
     height: 800px;
     margin: 0 auto;
+    background-color: rgba(0,0,0,0.1);
   }
   &__box {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 220px;
-    height: 220px;
-    transform: translate(-50%, -50%);
+    width: 16%;
     background-color: #ffffff;
-    box-shadow: 0 30px 60px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 0 60px 0 rgba(0,0,0,0.2);
   }
   &__text {
     position: absolute;
@@ -28,53 +25,11 @@
     transform: translate(-50%, -50%);
   }
   &__box--0 {
-    z-index: 100;
+    z-index: 1;
     background-color: red;
     box-shadow: 0;
     .spreader__text {
       color: #ffffff;
     }
-  }
-  &__box--1 {
-    top: 0;
-    transform: translate(-50%, 0);
-  }
-  &__box--2 {
-    top: 18%;
-    left: 21%;
-    transform: translate(0, 0);
-  }
-  &__box--3 {
-    top: 18%;
-    right: 21%;
-    left: inherit;
-    transform: translate(0, 0);
-  }
-  &__box--4 {
-    left: 0;
-    transform: translate(0, -50%);
-  }
-  &__box--5 {
-    right: 0;
-    left: inherit;
-    transform: translate(0, -50%);
-  }
-  &__box--6 {
-    top: inherit;
-    bottom: 18%;
-    left: 21%;
-    transform: translate(0, 0);
-  }
-  &__box--7 {
-    top: inherit;
-    right: 21%;
-    bottom: 18%;
-    left: inherit;
-    transform: translate(0,0);
-  }
-  &__box--8 {
-    top: inherit;
-    bottom: 0;
-    transform: translate(-50%,0);
   }
 }
